--- a/css/global.css
+++ b/css/global.css
@@ -9,6 +9,13 @@
     font-weight: 600;
     cursor: pointer;
 }
+.btn1-i {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    max-width: 100px;
+}
 .btn2 {
     height: 50px;
     padding: 0rem 2rem;
@@ -57,6 +64,14 @@
 .process-bar-99 {
     height: 20px;
     width: 99%;
+    color: #060e10;
+    background-color: #ffffff;
+    border-radius: 2px;
+    text-align: end;
+}
+.process-bar-100 {
+    height: 20px;
+    width: 100%;
     color: #060e10;
     background-color: #ffffff;
     border-radius: 2px;
